# QEDNet

./: .gitignore  Makefile  README.md  lake-manifest.json  lakefile.lean  main.py  pyproject.toml
data/: DumpStatements.lean  lake-manifest.json  lakefile.lean
data/data/: example.json
data/lean_scripts/: DumpStatements.lean  DumpStatementsDebug.lean  lake-manifest.json  lakefile.lean
data/scripts/: DumpOneStatement.lean  DumpStatements.lean  DumpStatementsDebug.lean  export_mathlib4_statements_traces.py  harvest_statements.py  one_statement.json  sample_statements.json
docs/: abstract.md  architecture.md  data.md  data_acquisition.md  directories.md  training.md
paper/: paper.fdb_latexmk  paper.fls  paper.tex
paper/latex/: paper.aux
src/qednet/io/: lean_rpc.py
tests/: conftest.py  test_lean_rpc.py
